--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
       "lucide-react": "^0.244.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
-      "recharts": "^2.7.2"
+      "recharts": "^2.7.2",
+      "vite-plugin-checker": "^0.9.1"
    },
    "devDependencies": {
       "@eslint/js": "^8.41.0",
