--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 node_modules
 dist
 .vscode
-.env
-.env.local
-.env.*.local
 .DS_Store
 .idea
 *.log
@@ -12,3 +9,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 .vercel
+
+# Supabase
+.branches
+.temp
+
+# dotenvx
+.env.keys
+.env.local
+.env.*.local
